<resources>
    <string name="app_name">Remedio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="resumo_cadastrar_perfil">Cadastre um perfil novo ou liste os perfis que voçê já criou. Você pode criar diversos perfis para cada membro da família ou dependente.</string>
    <string name="titulo_cadastar_perfil">Perfis</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_listar_perfil">Listar Perfis</string>

    <string name="resumo_cadastrar_remedio">Cadastre um remedio para um perfil default caso queira acesso rápido a lista de remédios.</string>
    <string name="botao_listar_remedio">Listar Remédios</string>
    <string name="titulo_cadastrar_remedio">Remédios</string>

    <string name="botaoSalvarPerfil">Salvar</string>
    <string name="TextViewNomearPerfil">Nome</string>
    <string name="TextViewDescreverPerdil">Descrição</string>

    <string name="action_settings">Settings</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="conteudoFoto">Foto do usuário</string>

    <string name="paraSubstituir">texto padrao</string>

    <string name="nomeRemedio">Nome do medicamento</string>
    <string name="intervalo">Intervalos da Medicação (horas)</string>
    <string name="quantidade">Dosagem (em plulas e vezes)</string>
    <string name="btn_salvar_remedio">Acresecentar Medicamento</string>

    <string name="btn_login">Entrar</string>
    <string name="btn_sign">Criar uma Conta</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="logo">Logo do app</string>

    <string name="updatePerfil">Atualizar</string>
    <string name="deletePerfil">Deletar</string>
    <string name="toogle_button">Alarm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
